Exception when an entity to load does not exist, Tooltips now supported in smart layer, image load errors are somehow handled, reversed marker sorting, fixed overflow bug.

--- a/issuemap.module/gwt/war/IssuemapGwt.css
+++ b/issuemap.module/gwt/war/IssuemapGwt.css
@@ -1,5 +1,8 @@
 /** Add css rules here for your application. */
 
+body {
+	overflow: hidden;
+}
 
 /** Example rules used by the template application (remove for your app) */
 .title {
@@ -17,6 +20,7 @@
 	left:0px;
 	right:0px;
 	bottom:40px;
+	overflow: hidden;
 }
 
 .header
